<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Floris\'Tic</string>
    <string name="title_activity_browser">Browser</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_map">Map</string>

    <string name="tab_title_data">Detail</string>
    <string name="tab_title_gallery">Gallery</string>
    <string name="tab_title_wiki">Wikipedia</string>
    <string name="tab_title_plantuse">Pl@ntUse</string>
    <string name="tab_title_map">Map</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <string name="button_browser">Browser</string>
    <string name="button_map">Map - Nearby species</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_sort">Sort</string>
    <string name="button_gps_settings">Location settings</string>

    <string name="message_network_not_available">Network is not available</string>
    <string name="message_no_result_found">No results found</string>

    <string name="species">species</string>
    <string name="species_count">%1$s\nspecies</string>
    <string name="filters_sort">filters/sort</string>
    <string name="filters">filters</string>
    <string name="sort">sort by</string>
    <string name="traits">traits</string>
    <string name="currently_have">currently have</string>
    <string name="geography">geography</string>
    <string name="nearby_species">Nearby species</string>
    <string name="search_locality">Search a locality</string>
    <string name="locality">Locality</string>
    <string name="author">author</string>
    <string name="detail">detail</string>
    <string name="map">map</string>

    <string name="flowers">flowers</string>
    <string name="fruits">fruits</string>
    <string name="leaves">leaves</string>

    <string name="facet_family">Family</string>
    <string name="facet_genus">Genus</string>
    <string name="facet_usage_cat">Uses</string>
    <string name="facet_usage_type">Sub-uses</string>
    <string name="facet_project">Project</string>

    <string name="label_genus">Genus</string>
    <string name="label_family">Family</string>
    <string name="label_common_names">Common names (GRIN)</string>
    <string name="label_uses">Uses (GRIN)</string>
    <string name="label_projects">Projects (Pl@ntNet)</string>
    <string name="label_traits">Traits (EOL)</string>

    <string name="current_location">Current location</string>

    <string name="ok">OK</string>

</resources>
