<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.tic.floris.floristic.DetailActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/txt_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_name"
                android:ellipsize="marquee"
                android:gravity="end"
                android:maxLines="1"
                android:textColor="@color/normal_grey"
                android:textSize="@dimen/title_subtext_size"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/dark_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txt_family_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/label_family"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/title_subtext_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_family_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_family_label"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="@color/dark_grey"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_family_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/txt_family_name"
                android:layout_marginLeft="@dimen/default_card_padding"
                android:layout_marginStart="@dimen/default_card_padding"
                android:layout_toEndOf="@id/txt_family_name"
                android:layout_toRightOf="@id/txt_family_name"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="@color/normal_grey" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/dark_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txt_genus_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/label_genus"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/title_subtext_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_genus_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_genus_label"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="@color/dark_grey"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_genus_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/txt_genus_name"
                android:layout_marginLeft="@dimen/default_card_padding"
                android:layout_marginStart="@dimen/default_card_padding"
                android:layout_toEndOf="@id/txt_genus_name"
                android:layout_toRightOf="@id/txt_genus_name"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:textColor="@color/normal_grey" />

            <TextView
                android:id="@+id/txt_genus_common_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_genus_name"
                android:textColor="@color/normal_grey" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/dark_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txt_common_names_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/label_common_names"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/title_subtext_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_common_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_common_names_label"
                android:textColor="@color/normal_grey" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/dark_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txt_uses_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/label_uses"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/title_subtext_size"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_uses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_uses_label"
                android:orientation="vertical" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/dark_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txt_projects_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/label_projects"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/title_subtext_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_projects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_projects_label"
                android:textColor="@color/normal_grey" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/dark_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/txt_traits_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:text="@string/label_traits"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/title_subtext_size"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_traits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_traits_label"
                android:orientation="vertical" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>